[package]
name = "jsonpath"
version = "0.1.2"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
description = "JSONPath for Rust"
keywords = ["jsonpath", "json", "xpath", "javascript", "query"]
license = "MIT"
repository = "https://github.com/greyblake/jsonpath-rs"
homepage = "https://github.com/greyblake/jsonpath-rs"
documentation = "https://docs.rs/jsonpath"
readme = "README.md"
categories = ["parsing"]
include = [
    "src/**/*",
    "test/**/*",
    "Cargo.toml",
    "README.md"
]

[badges]
travis-ci = { repository = "greyblake/jsonpath-rs", branch = "master" }

[dependencies]
serde = "1.0"
serde_json = "1.0"
error-chain = "0.11"
pest = "1.0"
pest_derive = "1.0"

[dev-dependencies]
lazy_static = "1.0"
